fixed clone workflow

--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -14,4 +14,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+              touch ~/.ssh/known_hosts
+              ssh-keyscan -H github.com >> ~/.ssh/known_hosts
               git clone https://github.com/antsquill/CMSC389T-Web-Template
