--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -14,5 +14,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-              cd ../pub
+              cd ~/../pub
               git clone git@github.com:antsquill/CMSC389T-Web-Template.git
