--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -15,4 +15,4 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
              unalias rm
-             rm -rf CMSC389T-Web-Template
+             rm -rf ~/../pub/CMSC389T-Web-Template
